force-app/main/default/objects/RuleCriteria__c/RuleCriteria__c.object-meta.xml
<CustomObject>
    <description>Object to hold the rule criteria for a rule</description>
    <label>Rule Criteria</label>
    <nameField>
        <displayFormat>Criteria #{0000}</displayFormat>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>