force-app/main/default/objects/RuleCriteria__c/fields/CrossFormula__c.field-meta.xml
<CustomField>
    <fullName>CrossFormula__c</fullName>
    <label>Cross Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>