force-app/main/default/objects/RuleCriteria__c/fields/Field_Relation__c.field-meta.xml
<CustomField>
    <fullName>Field_Relation__c</fullName>
    <formula>IF(CONTAINS(Field_API_Name__c, &apos;[].&apos;), &apos;Related List&apos;, IF(CONTAINS(Field_API_Name__c, &apos;.&apos;), &apos;Lookup&apos;, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Relation</label>
    <type>Text</type>
</CustomField>