force-app/main/default/objects/RuleCriteria__c/fields/GlobalVariable__c.field-meta.xml
<CustomField>
    <fullName>GlobalVariable__c</fullName>
    <label>Global Variable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>