force-app/main/default/objects/RuleCriteria__c/fields/Matching_Type__c.field-meta.xml
<CustomField>
    <fullName>Matching_Type__c</fullName>
    <label>Matching Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Not Equal To</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Does Not Contain</fullName>
            </value>
            <value>
                <fullName>Starts With</fullName>
            </value>
            <value>
                <fullName>Ends With</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Greater Or Equal</fullName>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Less Or Equal</fullName>
            </value>
            <value>
                <fullName>Includes</fullName>
            </value>
            <value>
                <fullName>Excludes</fullName>
            </value>
            <value>
                <fullName>Between</fullName>
            </value>
            <value>
                <fullName>Regular Expression</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>