force-app/main/default/objects/RuleCriteria__c/fields/Matching_Value__c.field-meta.xml
<CustomField>
    <fullName>Matching_Value__c</fullName>
    <label>Matching Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>