force-app/main/default/objects/RuleCriteria__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <label>Rule</label>
    <referenceTo>Rule__c</referenceTo>
    <relationshipLabel>Rule Criteria</relationshipLabel>
    <relationshipName>Rule_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>