force-app/main/default/objects/RuleCriteria__c/fields/RuleObjectType__c.field-meta.xml
<CustomField>
    <fullName>RuleObjectType__c</fullName>
    <formula>Rule__r.Object__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Object</label>
    <type>Text</type>
</CustomField>