force-app/main/default/objects/RuleCriteria__c/validationRules/Cross_Formula_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cross_Formula_Required</fullName>
    <active>true</active>
    <description>CrossFormula is required if  field selected is cross formula</description>
    <errorConditionFormula>AND( CONTAINS ( Field_API_Name__c , &apos;CrossFormula&apos;), ISBLANK( CrossFormula__c ))</errorConditionFormula>
    <errorMessage>Cross formula needs to be defined.</errorMessage>
</ValidationRule>