force-app/main/default/objects/RuleCriteria__c/validationRules/Matching_Value_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Matching_Value_Is_Required</fullName>
    <active>true</active>
    <description>Matching Value should be a required field for all operators except the operator &quot;Between&quot;</description>
    <errorConditionFormula>AND(Not(ISBLANK(TEXT(Matching_Type__c))),Not(ISPICKVAL(Matching_Type__c , &apos;Between&apos;)),Not(ISPICKVAL(Matching_Type__c , &apos;Is Null&apos;)),Not(ISPICKVAL(Matching_Type__c , &apos;Is Not Null&apos;)),Not(ISPICKVAL(Matching_Type__c , &apos;IsChanged&apos;)), ISBLANK(Matching_Value__c))</errorConditionFormula>
    <errorMessage>Please enter a matching value</errorMessage>
</ValidationRule>