force-app/main/default/objects/RuleCriteria__c/validationRules/Maximum_Value_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_Value_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Matching_Type__c , &apos;Between&apos;), ISBLANK(Maximum_Value__c))</errorConditionFormula>
    <errorDisplayField>Maximum_Value__c</errorDisplayField>
    <errorMessage>When the Operator is Between, the Maximum Value field is required.</errorMessage>
</ValidationRule>