force-app/main/default/objects/RuleCriteria__c/validationRules/Minimum_Value_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Value_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Matching_Type__c , &apos;Between&apos;), ISBLANK(Minimum_Value__c))</errorConditionFormula>
    <errorDisplayField>Minimum_Value__c</errorDisplayField>
    <errorMessage>When the Operator is Between, the Minimum Value field is required.</errorMessage>
</ValidationRule>