force-app/main/default/objects/RuleCriteria__c/validationRules/Operator_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Operator_Is_Required</fullName>
    <active>true</active>
    <description>Operator is required field</description>
    <errorConditionFormula>ISBLANK( TEXT(Matching_Type__c) )</errorConditionFormula>
    <errorMessage>Operator value is required</errorMessage>
</ValidationRule>